r140 (04. 04. 2023):
Added Ex-President buffs
Added option "VR Tracker Alignment"

r139 (30. 03. 2023):
XP Tracker: Fixed a crash when difficulty multiplier is nil

r138 (23. 03. 2023):
Updated to U235

r137 (13. 03. 2023):
Added option "Show gained XP in Mission Briefing only"

r136 (10. 03. 2023):
Added options "Don't show ECM Jammer that won't delay pagers" and "Show Waypoints for ECM Jammer"

r135 (05. 03. 2023):
Mission Briefing: Fixed a stack overflow crash
Mission Briefing: Fixed panel increasing in size for no reason

r134 (04. 03. 2023):
Black Cat: Fixed a crash with enabled waypoints
Counterfeit: Fixed a crash in inaccurate tracker

r133 (03. 03. 2023):
Fixed a crash with missing values

r132 (02. 03. 2023):
Safehouse Raid: Fixed a crash in Mission Briefing

r131 (01. 03. 2023):
Fixed a possible crash in Mission Briefing due to logic issue

r130 (28. 02. 2023):
Fixed a possible crash in Mission Briefing

r129 (27. 02. 2023):
Added options "Show Remaining XP to Next Level/Infamy Pool", "Show Remaining XP to Level 100" and "Show Mission XP Overview"
Ukrainian Prisoner: Fixed a crash related to unit

r128 (24. 02. 2023):
Hostile Takeover: Trigger fixes for achievements

r127 (23. 02. 2023):
Fixed a crash at mission load (client only)

r126 (22. 02. 2023):
Added trackers for Hostile Takeover
Attempt to fix Loot Counter not working to some players

r125 (04. 02. 2023):
Fixed a crash when an offset is set to a doctor bag

r124 (29. 01. 2023):
Pager Tracker: Fixed an issue with stuck pager waypoints when clients answered them
Enemy Counter: Fixed wrong enemy count after drop in

r123 (28. 01. 2023):
Attempt to fix random crashes in XP Tracker

r122 (21. 01. 2023):
Added option "Show Enemy Turret Trackers"
XP Tracker: Fixed a rare crash when game returned nil value for accumulated stealth bonus

r121 (13. 01. 2023):
Enemy Counter: Fixed double value
Enemy Counter: Fixed an issue where dominated guard with pager does not count down pager counter
