@@ -88,6 +88,7 @@
     "ehi_tracker_alignment_2" : "水平",
 
     "ehi_vr_tracker_alignment" : "VR追踪器对齐",
+    "ehi_vr_tracker_alignment_desc" : "设置使用VR时如何对齐追踪器",
 
     "ehi_visuals_menu" : "显示设置",
     "ehi_visuals_menu_desc" : "",
@@ -457,6 +458,8 @@
     "ehi_buffs_perks_maniac_desc" : "显示瘾君子的效果与冷却",
     "ehi_buffs_perks_anarchist" : "无政府主义者 / 军械士",
     "ehi_buffs_perks_anarchist_desc" : "显示无政府主义者 / 军械士的效果与冷却",
+    "ehi_buffs_perks_expresident" : "前总统",
+    "ehi_buffs_perks_expresident_desc" : "显示前总统的效果与冷却",
     "ehi_buffs_perks_biker" : "飞车党",
     "ehi_buffs_perks_biker_desc" : "显示飞车党的效果与冷却",
     "ehi_buffs_perks_kingpin" : "首脑",
@@ -586,7 +589,9 @@
     "ehi_experience_next_level" : "距下一级还有:",
     "ehi_experience_100_in" : "距满级还有:",
     "ehi_experience_xp_overview" : "经验概览:",
+    "ehi_experience_xp" : "经验",
     "ehi_experience_total_xp" : "总计经验: ",
+    "ehi_experience_all_gage_packages" : "集齐盖奇包：",
     "ehi_experience_stealth" : "潜入",
     "ehi_experience_loud" : "强袭",
     "ehi_experience_c4_used" : "使用C4",
@@ -615,6 +620,7 @@
     "ehi_experience_vault_drill_done" : "钻开金库",
     "ehi_experience_vault_drills_done" : "钻开金库",
     "ehi_experience_thermaldrill_done" : "热力钻机钻开金库",
+    "ehi_experience_saw_done" : "电锯完成",
     "ehi_experience_saws_done" : "电锯完成",
     "ehi_experience_timelock_done" : "定时锁完成",
     "ehi_experience_phone_answered" : "回答电话",
@@ -653,7 +659,7 @@
     "ehi_experience_ff3_gold_secured" : "劫获黄金",
     "ehi_experience_ed1_tag_right_truck" : "标记正确卡车",
     "ehi_experience_ed1_hack_1" : "黑入第一台PC",
-    "ehi_experience_ed1_hack_2" : "黑入第二天PC",
+    "ehi_experience_ed1_hack_2" : "黑入第二台PC",
     "ehi_experience_hm1_mobsters_killed" : "杀死俄罗斯黑手党成员",
     "ehi_experience_hm1_cars_destroyed" : "摧毁车辆",
     "ehi_experience_hm1_gas_station_destroyed" : "摧毁加油站",
@@ -689,6 +695,7 @@
     "ehi_experience_ggc_civie_drugged" : "给贵宾下药",
     "ehi_experience_ggc_gas_planted" : "部署催眠气体",
     "ehi_experience_ggc_color_code" : "找到一个颜色密码",
+    "ehi_experience_ggc_laser_disabled" : "关闭金库镭射",
     "ehi_experience_ggc_locker_room_found" : "找到更衣室",
     "ehi_experience_ggc_c4_taken" : "拿走C4",
     "ehi_experience_ggc_weak_spot_found" : "找到薄弱点",
@@ -850,5 +857,52 @@
     "ehi_experience_twh_mainframe_hacked" : "黑入主机",
     "ehi_experience_twh_pardons_stolen" : "偷走特赦令",
     "ehi_experience_twh_left_peoc" : "离开总统应急行动中心",
-    "ehi_experience_twh_disable_aa" : "瘫痪防空系统"
+    "ehi_experience_twh_disable_aa" : "瘫痪防空系统",
+    "ehi_experience_mex1_red_door_found" : "找到红门",
+    "ehi_experience_mex1_tunnel_found" : "找到隧道入口",
+    "ehi_experience_mex1_explosives_found" : "找到炸药",
+    "ehi_experience_mex1_tunnel_open" : "打开隧道",
+    "ehi_experience_mex1_plane_found" : "找到飞机",
+    "ehi_experience_mex1_secured_mandatory_bags" : "劫获足量指定战利品",
+    "ehi_experience_mex1_started_fueling" : "开始给飞机加油",
+    "ehi_experience_mex1_hose_detached" : "拔出加油管",
+    "ehi_experience_mex2_found_managers_safe" : "找到经理的保险箱",
+    "ehi_experience_mex2_picked_up_tape" : "拿走胶带",
+    "ehi_experience_mex2_used_tape" : "在茶杯上使用胶带",
+    "ehi_experience_mex2_picked_up_keychain" : "找到金库钥匙串",
+    "ehi_experience_mex2_found_manual" : "找到手册",
+    "ehi_experience_mex2_it_guy_escorted" : "护送IT人员到服务器机房",
+    "ehi_experience_mex2_beast_arrived" : "野兽钻机运达",
+    "ehi_experience_mex3_found_rfid_tag" : "拿走已编码的射频识别标签",
+    "ehi_experience_mex3_found_cells" : "找到牢房",
+    "ehi_experience_mex3_armory_opened" : "打开军械库",
+    "ehi_experience_mex3_handcuffs_cut" : "切断锁链",
+    "ehi_experience_mex3_hajrudin_found_his_car" : "护送赫鲁丁到他的车",
+    "ehi_experience_mex3_evidence_opened" : "打开证物室",
+    "ehi_experience_mex3_evidence_burned" : "烧毁证物",
+    "ehi_experience_mex4_found_bulucs_office" : "找到布鲁克的办公室",
+    "ehi_experience_mex4_found_inner_sanctum" : "找到“内部净土”",
+    "ehi_experience_mex4_discover_keycard_holder_mask_list" : "发现持有钥匙卡的警卫或面具名单(如找到钥匙卡门)",
+    "ehi_experience_mex4_found_keycard" : "找到钥匙卡(如找到钥匙卡门)",
+    "ehi_experience_mex4_inner_sanctum_open" : "打开“内部净土”",
+    "ehi_experience_mex4_codex_room_open" : "打开秘密会议室门",
+    "ehi_experience_mex4_bulucs_office_open" : "打开布鲁克办公室门",
+    "ehi_experience_mex4_interacted_with_safe" : "打开保险箱",
+    "ehi_experience_mex4_contact_list_stolen_stealth" : "偷走联系人名单",
+    "ehi_experience_mex4_found_car_keys" : "找到车钥匙(如乘车撤离)",
+    "ehi_experience_mex4_car_escape_stealth" : "潜入开车撤离",
+    "ehi_experience_mex4_boat_escape_stealth" : "潜入快艇撤离",
+    "ehi_experience_mex4_found_all_bomb_parts_hack_start" : "集齐炸弹零件/开始黑入",
+    "ehi_experience_mex4_inner_sanctum_open_bomb" : "炸开“内部净土”",
+    "ehi_experience_mex4_saw_placed" : "在秘密会议室门上部署电锯",
+    "ehi_experience_mex4_contact_list_stolen_car_escape" : "偷走联系人名单 (如乘车撤离)",
+    "ehi_experience_mex4_turret_discovered_car_escape" : "发现警方机枪塔(如乘车撤离)",
+    "ehi_experience_mex4_turret_destroyed_car_escape" : "摧毁机枪塔 (如乘车撤离)",
+    "ehi_experience_mex4_flare_lit_heli_escape" : "点亮信号弹(如直升机撤离)",
+    "ehi_experience_texas3_evidences_found" : "找到证据",
+    "ehi_experience_texas3_prototype_secured" : "劫获原型机",
+    "ehi_experience_texas3_documents_secured" : "劫获研究文件",
+    "ehi_experience_texas3_lab_destroyed" : "摧毁实验室",
+    "ehi_experience_texas3_escape_1" : "撤离(检查员未到场/警方机枪塔未部署)",
+    "ehi_experience_texas3_escape_2" : "撤离(检查员到场/警方已部署机枪塔)"
 }
