@@ -79,9 +79,7 @@ if EHI:GetBuffOption("expresident") then
         original.update_armor_stored_health(self, ...)
         if managers.hud then -- Vanilla check
             managers.ehi_buff:CallFunction("ExPresident", "SetStoredHealthMax", self:max_armor_stored_health())
-            if self._armor_stored_health then
-                managers.ehi_buff:AddGauge2("ExPresident", nil, self._armor_stored_health)
-            end
+            managers.ehi_buff:CallFunction("ExPresident", "SetRatio2", nil, self._armor_stored_health)
         end
     end
 
@@ -90,14 +88,14 @@ if EHI:GetBuffOption("expresident") then
         local previous = self._armor_stored_health
         original.add_armor_stored_health(self, ...)
         if previous ~= self._armor_stored_health and not self._check_berserker_done then
-            managers.ehi_buff:AddGauge2("ExPresident", nil, self._armor_stored_health)
+            managers.ehi_buff:CallFunction("ExPresident", "SetRatio2", nil, self._armor_stored_health)
         end
     end
 
     original.clear_armor_stored_health = PlayerDamage.clear_armor_stored_health
     function PlayerDamage:clear_armor_stored_health(...)
         original.clear_armor_stored_health(self, ...)
-        managers.ehi_buff:AddGauge2("ExPresident", nil, self._armor_stored_health)
+        managers.ehi_buff:CallFunction("ExPresident", "SetRatio2", nil, self._armor_stored_health)
     end
 end
 
